--- a/_config.yml
+++ b/_config.yml
@@ -1,9 +1,10 @@
 # TODO: replace the title with the name of your restaurant!
-title: "Data Exploration Blog"
+title: "Nails by Pear's House"
 # TODO: write your restaurateur alter ego name below, or your own name
-author: 
+author: Chi Le
 # TODO: write your Google Analytics tracking ID below
-google_analytics: G-FDG725B6FJ
+google_analytics: G-GVS377QQ3H
+
 
 theme: minima
 
